<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_snellen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SnellenActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onToggleConnection"
            android:visibility="visible"
            app:backgroundTint="@color/colorPrimaryDark"
            app:elevation="8dp"
            app:fabSize="mini"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button6"
            app:srcCompat="@drawable/ic_remote_off" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_bluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onDeviceSetting"
            app:backgroundTint="@color/design_default_color_primary_dark"
            app:elevation="8dp"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="@+id/button6"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_bluetooth" />

        <ImageButton
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="5"
            android:background="@color/lamp_off"
            android:clickable="true"
            android:contentDescription="@string/button6_desc"
            android:cropToPadding="false"
            android:focusable="true"
            android:onClick="onToggleBlock"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@id/guideline_25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_6" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".25" />

        <ImageButton
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="4dp"
            android:background="@color/lamp_off"
            android:contentDescription="@string/button5_desc"
            android:cropToPadding="false"
            android:onClick="onToggleBlock"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_5"
            app:layout_constraintBottom_toTopOf="@+id/guideline_40"
            app:layout_constraintEnd_toStartOf="@id/guideline_h"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline_25" />

        <ImageButton
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:background="@color/lamp_off"
            android:contentDescription="@string/button7_desc"
            android:onClick="onToggleBlock"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_7"
            app:layout_constraintBottom_toTopOf="@+id/guideline_40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_h"
            app:layout_constraintTop_toBottomOf="@+id/guideline_25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".40" />

        <ImageButton
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:background="@color/lamp_off"
            android:contentDescription="@string/button4_desc"
            android:onClick="onToggleBlock"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_4"
            app:layout_constraintBottom_toTopOf="@+id/guideline_55"
            app:layout_constraintEnd_toStartOf="@+id/guideline_h"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline_40" />

        <ImageButton
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:background="@color/lamp_off"
            android:contentDescription="@string/button8_desc"
            android:onClick="onToggleBlock"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_8"
            app:layout_constraintBottom_toTopOf="@+id/guideline_55"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline_h"
            app:layout_constraintTop_toBottomOf="@+id/guideline_40" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_55"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".55" />

        <ImageButton
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:background="@color/lamp_off"
            android:contentDescription="@string/button3_desc"
            android:onClick="onToggleBlock"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_3"
            app:layout_constraintBottom_toTopOf="@+id/guideline_70"
            app:layout_constraintEnd_toStartOf="@+id/guideline_h"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline_55" />

        <ImageButton
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:background="@color/lamp_off"
            android:contentDescription="@string/button9_desc"
            android:onClick="onToggleBlock"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_9"
            app:layout_constraintBottom_toTopOf="@+id/guideline_70"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline_h"
            app:layout_constraintTop_toBottomOf="@+id/guideline_55" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_70"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".70" />

        <ImageButton
            android:id="@+id/button10"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:background="@color/lamp_off"
            android:contentDescription="@string/button10_desc"
            android:onClick="onToggleBlock"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_10"
            app:layout_constraintBottom_toTopOf="@+id/guideline_85"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_h"
            app:layout_constraintTop_toBottomOf="@+id/guideline_70" />

        <ImageButton
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:background="@color/lamp_off"
            android:contentDescription="@string/button2_desc"
            android:onClick="onToggleBlock"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_2"
            app:layout_constraintBottom_toTopOf="@+id/guideline_85"
            app:layout_constraintEnd_toStartOf="@id/guideline_h"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline_70" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_85"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".85" />

        <ImageButton
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:background="@color/lamp_off"
            android:contentDescription="@string/button1_desc"
            android:onClick="onToggleBlock"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_h"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline_85" />

        <ImageButton
            android:id="@+id/button11"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:background="@color/lamp_off"
            android:contentDescription="@string/button11_desc"
            android:onClick="onToggleBlock"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_11"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline_h"
            app:layout_constraintTop_toBottomOf="@+id/guideline_85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".5" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/panel_pointer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@color/colorPrimaryDark"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/guideline_70"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_25">

            <TextView
                android:id="@+id/txt_pointer_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimaryDark"
                android:text="0"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="56sp"
                app:layout_constraintBottom_toBottomOf="@+id/button_pointer"
                app:layout_constraintStart_toEndOf="@+id/button_pointer"
                app:layout_constraintTop_toTopOf="@+id/button_pointer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimaryDark"
                android:text="O"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txt_pointer_position"
                app:layout_constraintTop_toTopOf="@+id/button_pointer"
                app:layout_constraintVertical_bias="0.491" />

            <SeekBar
                android:id="@+id/seek_pointer"
                style="@android:style/Widget.SeekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:max="12"
                android:progress="6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_pointer_position" />

            <Switch
                android:id="@+id/sw_calibration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:checked="false"
                android:switchMinWidth="48dp"
                android:switchPadding="5dp"
                android:text="@string/action_calibration_label"
                android:textColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:checked="false" />

            <ImageButton
                android:id="@+id/button_pointer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:background="@color/colorPrimaryDark"
                android:onClick="onTogglePointer"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_pointer_off" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/panel_calibration"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/colorPrimaryDark"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline_70">

            <Button
                android:id="@+id/button_dec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:onClick="onCalibDec"
                android:text="@string/action_calibration_dec"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_inc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:onClick="onCalibInc"
                android:text="@string/action_calibration_inc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:onClick="onCalibSave"
                android:text="@string/action_calibration_save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ToggleButton
            android:id="@+id/sw_mirror"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:text="ToggleButton"
            android:textOff="MIRROR"
            android:textOn="DIRECT"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
